--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
       <section id="achievements">
          <h2>Achievements/Certifications</h2>
          <ul>
-            <li>Achievement 1</li>
-            <li>Achievement 2</li>
-            <li>Achievement 3</li>
+            <li>ITS Java Certification</li>
+            <li>Champions BOTB MMCM Foundation Week 2024</li>
          </ul>
       </section>
       <section id="projects">
          <h2>Previous Projects</h2>
          <ul>
-            <li>Project 1</li>
+            <li>Kelsey's Homestay</li>
             <li>Project 2</li>
             <li>Project 3</li>
          </ul>
