Added more structure to the portfolio

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </article>
 
             <article class="display-card slide-left-normal">
-               <img src="(2).jpg" alt="Profile-picture">
+               <img src="Image2.jpg" alt="Profile-picture">
                <h3>Battle of the Bands Champions - 9th Foundation Week</h3>
                <p>Along with my band, "VISCO" the band representing CCIS won during the 9th Foundation Week of MMCM.</p>
             </article>
