Made the projects clickable and added links

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
             </p>
          </div>
          <div class="grid">
-            <article class="display-card slide-right-normal">
+            <a href="https://oop-dev.vercel.app/" target="_blank" rel="noopener noreferrer" class="display-card slide-right-normal">
                <img src="Image3.jpg" alt="picture">
                <h3>Kelsey's Homestay</h3>
                <p>A resposive website for Booking properties, made by group using a tech stack with react and typescript.</p>
-            </article>
+            </a>
 
-            <article class="display-card slide-left-normal">
+            <a href="https://github.com/Beanlon/TransactionLoggingSystem" target="_blank" rel="noopener noreferrer" class="display-card slide-left-normal">
                <img src="Image4.jpg" alt="Profile-picture">
                <h3>Transaction Logging System</h3>
                <p>An individual project made purely out of Java using Java swing and filewriter.</p>
-            </article>
+            </a>
       </section>
       </main>
       <script src="script.js"></script>
