Add current course projects section to index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                friends.</p>
             </div>
          </div>
-         </section>
       </section>
       <section class="achievements slide-bottom-normal">
          <h2>Achievements & Certifications</h2>
@@ -78,6 +77,20 @@
                <h3>Transaction Logging System</h3>
                <p>An individual project made purely out of Java using Java swing and filewriter.</p>
             </a>
+      </section>
+      <section class="CourseProject slide-bottom-normal">
+         <h2>Current Course Projects</h2>
+         <div class="text">
+            <p>These are the projects currently made for our IT013 Course.
+               The projects listed below are a mix of both individual and group projects.
+            </p>
+         </div>
+         <div class="grid">
+            <article class="display-card slide-right-normal">
+               <img src="Image5.jpg" alt="picture">
+               <h3>Green Sense</h3>
+               <p>A static website for greenspace farmers utilizing CSS and HTML.</p>
+            </article>
       </section>
       </main>
       <script src="script.js"></script>
