--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             </p>
          </div>
          <div class="grid">
-            <article class="display-card slide-right-normal">
+            <a href="https://beanlon.github.io/GreenSense/" class="display-card slide-right-normal">
                <img src="Image5.jpg" alt="picture">
                <h3>Green Sense</h3>
                <p>A static website for greenspace farmers utilizing CSS and HTML.</p>
-            </article>
+            </a>
       </section>
       </main>
       <script src="script.js"></script>
