Fix link to Green Sense project

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </p>
          </div>
          <div class="grid">
-            <a href="https://beanlon.github.io/GreenSense/" class="display-card slide-right-normal">
+            <a href="https://beanlon.github.io/Green_sense/" class="display-card slide-right-normal">
                <img src="Image5.jpg" alt="picture">
                <h3>Green Sense</h3>
                <p>A static website for greenspace farmers utilizing CSS and HTML.</p>
