Update project links and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -86,10 +86,20 @@
             </p>
          </div>
          <div class="grid">
-            <a href="https://beanlon.github.io/Green_sense/" class="display-card slide-right-normal">
+            <a href="https://beanlon.github.io/GreenSense/" class="display-card slide-right-normal">
                <img src="Image5.jpg" alt="picture">
                <h3>Green Sense</h3>
                <p>A static website for greenspace farmers utilizing CSS and HTML.</p>
+            </a>
+            <a href="https://beanlon.github.io/MATA_FA3_MachineProblem1/" class="display-card slide-right-normal">
+               <img src="Image6.jpg" alt="picture">
+               <h3>Replace All</h3>
+               <p>A static website with the fundamentals of javascipt to remove whitespaces of the input.</p>
+            </a>
+            <a href="https://beanlon.github.io/MATA_FA3_MachineProblem4/" class="display-card slide-right-normal">
+               <img src="Image7.jpg" alt="picture">
+               <h3>Email Checker</h3>
+               <p>A static website with the fundamentals of javascipt to check if the email is valid.</p>
             </a>
       </section>
       </main>
